--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@peter-pakanun/svelte-icon",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
-  "svelte": "src/Icon.js",
+  "svelte": "src/Index.svelte",
   "description": "Simple Svelte Icon Component",
   "scripts": {
     "build": "rollup -c",
@@ -12,8 +12,7 @@
   },
   "files": [
     "src",
-    "index.mjs",
-    "index.js"
+    "dist"
   ],
   "repository": {
     "type": "git",
